variables.RunFour.scala.error
Erreur de compilation :
RunFour:5: error: Boolean does not take parameters
else (estSurBiscuit()) {
                       ^